manifests/wiki/bookstack_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  namespace: wiki
  labels:
    app.kubernetes.io/instance: wiki
    app.kubernetes.io/name: bookstack
spec:
  selector:
    app.kubernetes.io/instance: wiki
    app.kubernetes.io/name: bookstack
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
