manifests/wiki/mariadb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki-mariadb
  namespace: wiki
  labels:
    app.kubernetes.io/instance: wiki
    app.kubernetes.io/name: mariadb
spec:
  selector:
    app.kubernetes.io/instance: wiki
    app.kubernetes.io/name: mariadb
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
      protocol: TCP
