manifests/wiki/wikijs_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: wiki
  labels:
    app.kubernetes.io/instance: wiki
    app.kubernetes.io/name: wikijs
spec:
  selector:
    app.kubernetes.io/instance: wiki
    app.kubernetes.io/name: wikijs
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
