manifests/wiki/wikijs_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikijs
  namespace: wiki
  labels:
    app.kubernetes.io/instance: wiki
  annotations:
    cert-manager.io/cluster-issuer: ${vals_infra_certManager_issuer}
    external-dns.kubernetes.io/target: ${vals_info_cluster_publicHost}
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wiki.${vals_info_cluster_domain}
      secretName: wikijs-tls
  rules:
    - host: wiki.${vals_info_cluster_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wikijs
                port:
                  name: http
